2013-06-05  Alan Mackenzie  <acm@muc.de>

	* isearch.el (isearch-allow-prefix): New user option.
	(isearch-other-meta-char): Don't exit isearch when a prefix
	argument is typed whilst `isearch-allow-prefix' is non-nil.
	(Bug#9706)

2013-06-05  Stefan Monnier  <monnier@iro.umontreal.ca>

	* autorevert.el (auto-revert-notify-handler): Use memq.
	Hide assertion failure.

	* skeleton.el: Use cl-lib.
	(skeleton-further-elements): Use defvar-local.
	(skeleton-insert): Use cl-progv.

2013-06-05  Teodor Zlatanov  <tzz@lifelogs.com>

	* progmodes/prog-mode.el (prog-prettify-symbols)
	(prog-prettify-install): Update docstrings.

2013-06-05  Stefan Monnier  <monnier@iro.umontreal.ca>

	* simple.el: Move all the prog-mode code to prog-mode.el.
	* progmodes/prog-mode.el: New file.
	* loadup.el: Add prog-mode.el.

2013-06-05  Teodor Zlatanov  <tzz@lifelogs.com>

	* simple.el (prog-prettify-symbols): Add version.
	(prog-prettify-install): Add convenience function to prettify symbols.

	* progmodes/perl-mode.el (perl--augmented-font-lock-keywords)
	(perl--augmented-font-lock-keywords-1)
	(perl--augmented-font-lock-keywords-2, perl-mode): Remove unneeded
	variables and use it.

	* progmodes/cfengine.el (cfengine3--augmented-font-lock-keywords)
	(cfengine3-mode): Remove unneeded variable and use it.

	* emacs-lisp/lisp-mode.el (lisp--augmented-font-lock-keywords)
	(lisp--augmented-font-lock-keywords-1)
	(lisp--augmented-font-lock-keywords-2, lisp-mode-variables):
	Remove unneeded variables and use it.

2013-06-05  Teodor Zlatanov  <tzz@lifelogs.com>

	* net/tls.el (open-tls-stream): Remove unneeded buffer contents up
	to point when opening the connection.
	Suggested by João Távora <joaotavora@gmail.com> in
	<http://lists.gnu.org/archive/html/emacs-devel/2013-05/msg00464.html>.

2013-06-05  Stefan Monnier  <monnier@iro.umontreal.ca>

	* subr.el (load-history-regexp, load-history-filename-element)
	(eval-after-load, after-load-functions, do-after-load-evaluation)